dotnet core: try fixing run-test-binaries-cross-plat

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -328,6 +328,13 @@ jobs:
       DOTNET_SYSTEM_GLOBALIZATION_INVARIANT: 1
     strategy:
       matrix:
+        include:
+          - arch: x64
+            libs: /usr/lib
+          - arch: arm
+            libs: /usr/arm-linux-gnueabihf/lib
+          - arch: arm64
+            libs: /usr/aarch64-linux-gnu/lib
         arch: [x64, arm, arm64]
     steps:
       - name: Set up build environment
@@ -340,7 +347,7 @@ jobs:
           # gcrypt, which the apt-get command relies on.
           sudo mkdir -p /etc/gcrypt && echo all | sudo tee /etc/gcrypt/hwf.deny
 
-          sudo apt-get update && sudo apt-get install -y qemu binfmt-support qemu-user-static qemu-system-arm gcc-arm-linux-gnueabihf libc6-armhf-cross libc6-arm64-cross
+          sudo apt-get update && sudo apt-get install -y qemu binfmt-support qemu-user-static qemu-system-arm gcc-arm-linux-gnueabihf gcc-aarch64-linux-gnu libc6-armhf-cross libc6-arm64-cross
           sudo dpkg --add-architecture armhf
           sudo dpkg --add-architecture arm64
           sudo update-binfmts --enable qemu-aarch64
@@ -357,4 +364,4 @@ jobs:
       - name: Run ${{ matrix.arch }}
         run: |
           chmod +x .libsodium-builds/linux-${{ matrix.arch }}/Tests
-          .libsodium-builds/linux-${{ matrix.arch }}/Tests
+          env LD_LIBRARY_PATH=${{ matrix.libs }} .libsodium-builds/linux-${{ matrix.arch }}/Tests
