--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,3 +154,28 @@ jobs:
           env CPPFLAGS="-DDEV_MODE=1" ./configure --disable-dependency-tracking --host=powerpc-linux-gnu
           make -j $(nproc)
           make clean > /dev/null
+
+  android:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Update packages list
+        run: sudo apt-get update
+
+      - name: Install base dependencies
+        run: sudo apt-get install -y libtool autoconf automake unzip
+
+      - name: Autogen
+        run: ./autogen.sh -s
+
+      - name: Install Android NDK
+        run: |
+          mkdir /tmp/android && cd /tmp/android
+          curl -o ndk.zip -L https://dl.google.com/android/repository/android-ndk-r24-beta2-linux.zip
+          unzip ndk.zip && rm -f *.zip && mv android-ndk* ndk
+
+      - name: Android compilation
+        run: |
+          env ANDROID_NDK_HOME=/tmp/android/ndk ./dist-build/android-x86.sh
+          env ANDROID_NDK_HOME=/tmp/android/ndk ./dist-build/android-armv8-a.sh
