--- a/src/libsodium/Makefile.am
+++ b/src/libsodium/Makefile.am
@@ -3,6 +3,9 @@ lib_LTLIBRARIES = \
 
 libsodium_la_SOURCES = \
 	crypto_aead/aegis128l/aead_aegis128l.c \
+	crypto_aead/aegis128l/aead_aegis128l.h \
+	crypto_aead/aegis128l/soft/aead_aegis128l_soft.c \
+	crypto_aead/aegis128l/soft/aead_aegis128l_soft.h \
 	crypto_aead/aegis256/aead_aegis256.c \
 	crypto_aead/aes256gcm/aead_aes256gcm.c \
 	crypto_aead/chacha20poly1305/sodium/aead_chacha20poly1305.c \
@@ -22,6 +25,7 @@ libsodium_la_SOURCES = \
 	crypto_core/hsalsa20/ref2/core_hsalsa20_ref2.c \
 	crypto_core/hsalsa20/core_hsalsa20.c \
 	crypto_core/salsa/ref/core_salsa_ref.c \
+	crypto_core/softaes/softaes.c \
 	crypto_generichash/crypto_generichash.c \
 	crypto_generichash/blake2b/generichash_blake2.c \
 	crypto_generichash/blake2b/ref/blake2.h \
@@ -93,6 +97,7 @@ libsodium_la_SOURCES = \
 	include/sodium/private/implementations.h \
 	include/sodium/private/mutex.h \
 	include/sodium/private/sse2_64_32.h \
+	include/sodium/private/softaes.h \
 	include/sodium/private/quirks.h \
 	randombytes/randombytes.c \
 	sodium/codecs.c \
@@ -224,6 +229,7 @@ libarmcrypto_la_CPPFLAGS = $(libsodium_la_CPPFLAGS) \
 	@CFLAGS_ARMCRYPTO@
 libarmcrypto_la_SOURCES = \
 	crypto_aead/aegis128l/armcrypto/aead_aegis128l_armcrypto.c \
+	crypto_aead/aegis128l/armcrypto/aead_aegis128l_armcrypto.h \
 	crypto_aead/aegis256/armcrypto/aead_aegis256_armcrypto.c \
 	crypto_aead/aes256gcm/armcrypto/aead_aes256gcm_armcrypto.c
 
@@ -231,9 +237,10 @@ libaesni_la_LDFLAGS = $(libsodium_la_LDFLAGS)
 libaesni_la_CPPFLAGS = $(libsodium_la_CPPFLAGS) \
 	@CFLAGS_SSE2@ @CFLAGS_SSSE3@ @CFLAGS_AESNI@ @CFLAGS_PCLMUL@
 libaesni_la_SOURCES = \
-	crypto_aead/aes256gcm/aesni/aead_aes256gcm_aesni.c \
 	crypto_aead/aegis128l/aesni/aead_aegis128l_aesni.c \
-	crypto_aead/aegis256/aesni/aead_aegis256_aesni.c
+	crypto_aead/aegis128l/aesni/aead_aegis128l_aesni.h \
+	crypto_aead/aegis256/aesni/aead_aegis256_aesni.c \
+	crypto_aead/aes256gcm/aesni/aead_aes256gcm_aesni.c
 
 libsse2_la_LDFLAGS = $(libsodium_la_LDFLAGS)
 libsse2_la_CPPFLAGS = $(libsodium_la_CPPFLAGS) \
