--- a/src/libsodium/Makefile.am
+++ b/src/libsodium/Makefile.am
@@ -7,6 +7,9 @@ libsodium_la_SOURCES = \
 	crypto_aead/aegis128l/soft/aead_aegis128l_soft.c \
 	crypto_aead/aegis128l/soft/aead_aegis128l_soft.h \
 	crypto_aead/aegis256/aead_aegis256.c \
+	crypto_aead/aegis256/aead_aegis256.h \
+	crypto_aead/aegis256/soft/aead_aegis256_soft.c \
+	crypto_aead/aegis256/soft/aead_aegis256_soft.h \
 	crypto_aead/aes256gcm/aead_aes256gcm.c \
 	crypto_aead/chacha20poly1305/sodium/aead_chacha20poly1305.c \
 	crypto_aead/xchacha20poly1305/sodium/aead_xchacha20poly1305.c \
@@ -231,6 +234,7 @@ libarmcrypto_la_SOURCES = \
 	crypto_aead/aegis128l/armcrypto/aead_aegis128l_armcrypto.c \
 	crypto_aead/aegis128l/armcrypto/aead_aegis128l_armcrypto.h \
 	crypto_aead/aegis256/armcrypto/aead_aegis256_armcrypto.c \
+	crypto_aead/aegis256/armcrypto/aead_aegis256_armcrypto.h \
 	crypto_aead/aes256gcm/armcrypto/aead_aes256gcm_armcrypto.c
 
 libaesni_la_LDFLAGS = $(libsodium_la_LDFLAGS)
@@ -240,6 +244,7 @@ libaesni_la_SOURCES = \
 	crypto_aead/aegis128l/aesni/aead_aegis128l_aesni.c \
 	crypto_aead/aegis128l/aesni/aead_aegis128l_aesni.h \
 	crypto_aead/aegis256/aesni/aead_aegis256_aesni.c \
+	crypto_aead/aegis256/aesni/aead_aegis256_aesni.h \
 	crypto_aead/aes256gcm/aesni/aead_aes256gcm_aesni.c
 
 libsse2_la_LDFLAGS = $(libsodium_la_LDFLAGS)
