Try to build all Android targets (besides AAR for now)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,4 +178,6 @@ jobs:
       - name: Android compilation
         run: |
           env ANDROID_NDK_HOME=/tmp/android/ndk ./dist-build/android-x86.sh
+          env ANDROID_NDK_HOME=/tmp/android/ndk ./dist-build/android-x86_64.sh
+          env ANDROID_NDK_HOME=/tmp/android/ndk ./dist-build/android-armv7-a.sh
           env ANDROID_NDK_HOME=/tmp/android/ndk ./dist-build/android-armv8-a.sh
