--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: build
         run: |
-          zig build -Drelease-fast -Dtarget=x86_64-linux-gnu.2.17
+          zig build -Doptimize=ReleaseFast -Dtarget=x86_64-linux-gnu.2.17
       - name: tests
         run: cd zig-out/bin && ./run.sh
       - uses: actions/upload-artifact@v3
@@ -64,7 +64,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: build
         run: |
-          zig build -Drelease-fast -Dtarget=arm-linux-gnueabihf.2.23
+          zig build -Doptimize=ReleaseFast -Dtarget=arm-linux-gnueabihf.2.23
       - name: tests
         run: |
           cd zig-out/bin && env LD_LIBRARY_PATH=/usr/arm-linux-gnueabihf/lib ./run.sh
@@ -92,7 +92,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: build
         run: |
-          zig build -Drelease-fast -Dtarget=aarch64-linux-gnu.2.23
+          zig build -Doptimize=ReleaseFast -Dtarget=aarch64-linux-gnu.2.23
       - name: tests
         run: |
           cd zig-out/bin && env LD_LIBRARY_PATH=/usr/aarch64-linux-gnu/lib ./run.sh
@@ -117,7 +117,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: build
         run: |
-          zig build -Drelease-fast -Dtarget=x86_64-linux-musl
+          zig build -Doptimize=ReleaseFast -Dtarget=x86_64-linux-musl
       - name: tests
         run: |
           cd zig-out/bin && ./run.sh
@@ -136,7 +136,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: build
         run: |
-          zig build -Drelease-fast -Dtarget=arm-linux-musleabihf
+          zig build -Doptimize=ReleaseFast -Dtarget=arm-linux-musleabihf
       - uses: actions/upload-artifact@v3
         with:
           name: build-linux-musl-arm
@@ -152,7 +152,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: build
         run: |
-          zig build -Drelease-fast -Dtarget=aarch64-linux-musl
+          zig build -Doptimize=ReleaseFast -Dtarget=aarch64-linux-musl
       - uses: actions/upload-artifact@v3
         with:
           name: build-linux-musl-arm64
