Use CCRandomGenerateBytes if present
Helps with App Store validation rules.

--- a/configure.ac
+++ b/configure.ac
@@ -611,6 +611,7 @@ AC_SUBST(CFLAGS_PCLMUL)
 AC_SUBST(CFLAGS_RDRAND)
 
 AC_CHECK_HEADERS([sys/mman.h sys/param.h sys/random.h intrin.h sys/auxv.h])
+AC_CHECK_HEADERS([CommonCrypto/CommonRandom.h])
 
 AC_MSG_CHECKING([if _xgetbv() is available])
 AC_LINK_IFELSE(
